keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-http
  namespace: keycloak
  labels:
    app: keycloak-http
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: keycloak-http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-http
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-http
  template:
    metadata:
      labels:
        app: keycloak-http
    spec:
      containers:
        - name: keycloak
          image: jboss/keycloak:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 400m
              memory: 512Mi
            limits:
              cpu: 800m
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
