keycloak/postgres.yaml

apiVersion: v1
kind: Service
metadata:
  name: pg-keycloak
  namespace: keycloak
spec:
  ports:
  - name: pgql
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: pg-keycloak
---
apiVersion: apps/v1  #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: StatefulSet
metadata:
  name: pg-keycloak
  namespace: keycloak
spec:
  serviceName: "pg-keycloak"
  replicas: 1
  selector:
    matchLabels:
      app: pg-keycloak
  template:
    metadata:
      labels:
        app: pg-keycloak
    spec:
      containers:
      - name: postgres
        image: postgres:9.5
        volumeMounts:
        - name: datadir
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
        ports:
        - containerPort: 5432
      # No pre-stop hook is required, a SIGTERM plus some time is all that's
      # needed for graceful shutdown of a node.
      terminationGracePeriodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: 1Gi
