keycloak/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-example
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - keycloak.oneclinick.com
      secretName: letsencrypt-clouddns
  rules:
    - host: keycloak.oneclinick.com
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak-http
              servicePort: 8080
          - path: /auth
            backend:
              serviceName: keycloak-http
              servicePort: 8080
